--- a/satellite-health-data.adoc
+++ b/satellite-health-data.adoc
@@ -1,7 +1,7 @@
 
 .Satellite Health Data Packet Specification
 
-[cols="1,1,1,5,1"]
+[cols="1,1,1,5"]
 |===
 |Field |Type |Item Type |Description
 
@@ -49,7 +49,7 @@
 |===
 
 
-==== *Derived From:*
+*Derived From:*
 
 
 
