--- a/manuscript.tex
+++ b/manuscript.tex
@@ -1,3 +1,8 @@
+\tolerance=1
+\emergencystretch=\maxdimen
+\hyphenpenalty=10000
+\hbadness=10000
+
 \documentclass[conf]{new-aiaa}
 %\documentclass[journal]{new-aiaa} for journal papers
 \usepackage[utf8]{inputenc}
@@ -12,7 +17,7 @@
 \title{Model-Based CubeSat Flight-Software Architecture using a Docs-as-Code Approach}
 
 
-\author{Sean Marquez\footnote{None} and Kevin Chiu\footnote{None} }
+\author{Sean Marquez and Kevin Chiu }
 \affil{Old Dominion University, Norfolk, VA, 23529}
 
 \author{Sharan Asundi, Ph.D.\footnote{Assistant Professor, Department of Mechanical \& Aerospace Engineering, Old Dominion University} }
