deploy: 859572c1fcd8019b7a294d3c6010a458c3a2cbe1

--- a/manuscript.tex
+++ b/manuscript.tex
@@ -36,6 +36,7 @@ With the growing community of CubeSat developers has emerged a need for a techni
 
 \section{Nomenclature}
 
+\begin{center}
 {\renewcommand\arraystretch{1.0}
 \noindent\begin{longtable*}{@{}l @{\quad=\quad} l@{}}
 $1U$ & 1-Unit \\
@@ -53,6 +54,7 @@ $SWRL$ & Semantic Web Rule Language \\
 $USCGA$ & United Stated Coast Guard Academy \\
 $WFF$   & Wallops Flight Facility  
 \end{longtable*}}
+\end{center}
 
 
 \section{Introduction}
